renew Hero Section

--- a/src/template.html
+++ b/src/template.html
@@ -35,12 +35,12 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">John Doe</span>
+          Hi, my name is <span class="text-color-main">Tanya K.</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Developer you need.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Hire Me</a>
         </p>
       </div>
     </div>
